[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["yoshin04 <taigaby0411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
