[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["yoshin04 <taigaby0411@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
pylint = "^3.2.5"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
